SERVER-30398 setFeatureCompatibilityVersion shouldn't disable custom roles